--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dev_dependencies:
   shared_preferences: ^0.5.7+3
   modal_progress_hud: ^0.1.3
   flutter_local_notifications: ^1.4.4+1
+  flutter_bloc: ^4.0.0
 
 flutter:
   uses-material-design: true
