--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dev_dependencies:
   modal_progress_hud: ^0.1.3
   flutter_local_notifications: ^1.4.4+1
   flutter_bloc: ^4.0.0
+  equatable: ^1.2.0
 
 flutter:
   uses-material-design: true
