--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dev_dependencies:
   flutter_local_notifications: ^1.4.4+1
   flutter_bloc: ^4.0.0
   equatable: ^1.2.0
+  photo_view: ^0.9.2
 
 flutter:
   uses-material-design: true
