--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dev_dependencies:
   flutter_bloc: ^4.0.0
   equatable: ^1.2.0
   photo_view: ^0.9.2
+  dio: ^3.0.9
 
 flutter:
   uses-material-design: true
