--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dev_dependencies:
   flutter_spinkit: ^4.1.2+1
   http: ^0.12.1
   rxdart: ^0.24.1
+  cached_network_image: ^2.2.0+1
 
 flutter:
   uses-material-design: true
